--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings":"^1.0.4"
+    "typings":"^1.0.4",
+    "jquery": "^3.1.0",
+    "underscore": "^1.8.3"
   }
 }
